--- a/webapp/view/PurchaseOrder.view.xml
+++ b/webapp/view/PurchaseOrder.view.xml
@@ -17,8 +17,8 @@ xmlns:t="sap.ui.table">
 						class="sapUiResponsiveContentPadding">
 						<items>
 							<IconTabFilter id="tab1">
-								<Button id="btn1" text="Save as Draft" tooltip="Add" press="onDraft" icon="sap-icon://add"/>
-								<Button id="btn2" text="Add" tooltip="Add" press="onSave" icon="sap-icon://save"/>
+								<Button id="btn1" text="Save as Draft" tooltip="Add" press="fDraft" icon="sap-icon://add"/>
+								<Button id="btn2" text="Add" tooltip="Add" press="fSave" icon="sap-icon://save"/>
 								<VBox class="sapUiResponsiveMargin">
 									<f:SimpleForm editable="true" layout="ResponsiveGridLayout" id="form0" width="100%">
 										<!---Vendor Name-->
@@ -28,7 +28,7 @@ xmlns:t="sap.ui.table">
 											</layoutData>
 										</Label>
 										<Input id="BPCode" type="Text" value="{oMdlAllBP>/allbp/Vendor}" showValueHelp="true" valueHelpOnly="true"
-											valueHelpRequest="handleValueBPMaster" width="100%">
+											valueHelpRequest="onHandleValueBPMaster" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
@@ -77,7 +77,7 @@ xmlns:t="sap.ui.table">
 											</layoutData>
 										</Label>
 										<Input width="100%" id="CntAmount" required="true" textAlign="Right" value="{path:'/number', type:'sap.ui.model.type.Currency'}"
-											valueHelpOnly="true" valueHelpRequest="handleValueHelpSupplier" liveChange="ContractAmount" >
+											valueHelpOnly="true" valueHelpRequest="handleValueHelpSupplier" liveChange="fContractAmount" >
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
